; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/windowscodecs/extr_converter.c_to_sRGB_component.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/windowscodecs/extr_converter.c_to_sRGB_component.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float)* @to_sRGB_component to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @to_sRGB_component(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca float, align 4
  store float %0, float* %3, align 4
  %4 = load float, float* %3, align 4
  %5 = fcmp ole float %4, 0x3F69A5C380000000
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load float, float* %3, align 4
  %8 = fmul float 0x4029D70A40000000, %7
  store float %8, float* %2, align 4
  br label %14

9:                                                ; preds = %1
  %10 = load float, float* %3, align 4
  %11 = call float @powf(float %10, float 0x3FDAAAAAA0000000) #2
  %12 = fmul float 0x3FF0E147A0000000, %11
  %13 = fsub float %12, 0x3FAC28F5C0000000
  store float %13, float* %2, align 4
  br label %14

14:                                               ; preds = %9, %6
  %15 = load float, float* %2, align 4
  ret float %15
}

; Function Attrs: nounwind
declare dso_local float @powf(float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
